--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "nppe_pel",
-  "version": "1.0.0",
-  "description": "compiler for pel assets.",
+  "name": "ui_builder",
+  "version": "0.5.0",
+  "description": "Compiler for UI.",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch --info-verbosity verbose --config webpack.dev.js"
   },
-  "author": "Cocomore",
+  "author": "Marcelo Tosco @capynet",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^14.14.10",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^3.5.3",
-    "dotenv": "^8.2.0",
-    "dotenv-webpack": "^6.0.0",
-    "handlebars": "^4.7.6",
+    "@types/node": "^17.0.8",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
+    "dotenv": "^11.0.0",
+    "dotenv-webpack": "^7.0.3",
+    "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
     "handlebars-loader": "^1.7.1",
-    "inversify": "^5.0.1",
+    "inversify": "^6.0.1",
+    "node-sass": "^7.0.1",
     "reflect-metadata": "^0.1.13",
-    "sass-loader": "^8.0.2",
-    "sortablejs": "^1.10.2",
-    "style-loader": "^1.2.0",
-    "ts-loader": "^8.0.10",
-    "typescript": "^4.0.5",
-    "uuid": "^8.3.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2",
-    "node-sass": "^4.14.1"
+    "sass-loader": "^12.4.0",
+    "sortablejs": "^1.14.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-merge": "^5.8.0"
   }
 }
