--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "mock": "json-server --watch mock.json"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -19,7 +20,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "json-server": "^0.17.0"
   },
   "eslintConfig": {
     "root": true,
