--- a/ui/package.json
+++ b/ui/package.json
@@ -21,7 +21,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "sass": "^1.49.0",
+    "sass-loader": "^10"
   },
   "eslintConfig": {
     "root": true,
