--- a/merlb.routing.yml
+++ b/merlb.routing.yml
@@ -1,8 +1,8 @@
-plb.save_layout:
-  path: "/plb/layout/{entity_type}/{entity}"
+merlb.save_layout:
+  path: "/merlb/layout/{entity_type}/{entity}"
   methods: [POST]
   defaults:
-    _controller: '\Drupal\plb\Controller\PlbController::storeLayout'
+    _controller: '\Drupal\merlb\Controller\MerlbController::storeLayout'
     _title: "Save layout"
   requirements:
     _permission: "use layout builder"
